﻿Revision history for {{$dist->name}}

{{$NEXT}}

2.025020 2016-06-19T07:19:45Z 9153e61
 [Dependencies::Stats]
 - Dependencies changed since 2.025010, see misc/*.deps* for details
 - test: ↑1 -1

 [Features]
 - 'bumpversions' moved to 'bump_versions', but legacy interface retained.
 - 'srcreadme' moved to 'src_readme' but legacy interface retained.
 - 'copyfiles' moved to 'copy_files' but legacy interface retained.
 - Remove residual reliance on Path::Class ( Requires DZil >5.038 )( Closes #1 )

2.025010 2015-11-15T02:28:17Z f61f784
 - Provision more files during minting instead of relying on generation on the first invocation of `dzil build`

2.025003 2015-10-19T14:11:40Z 834555c
 [Bugfix]
 - Avoid test failures on Dzil 5.040 by not expecting pod-* tests anymore.

 [Dependencies::Stats]
 - Dependencies changed since 2.025002, see misc/*.deps* for details
 - develop: +2 ↑1

2.025002 2015-08-14T12:13:53Z 6d20907
 [Bugfix]
 - Ensure declared minimum version of MinimumPerl
 - Provision a bunch of stock files I tend to need.

 [Dependencies::Stats]
 - Dependencies changed since 2.025001, see misc/*.deps* for details
 - configure: ↓1
 - runtime: ↑1 ↓1 -1
 - test: ↓1

2.025001 2015-07-05T03:52:11Z 31e79e3
 [Bugfix]
 - Use a newer contributing module in pre-emption of ether accepting my patch

 [Dependencies::Stats]
 - Dependencies changed since 2.025000, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1

 [Note]
 - I really hate having so many plugins, and I really hate everyone needing my bundle
 - But I also hate anyone needing my bundle.

 [Todo]
 - Have a system where more static stuff happens at a dedicated phases instead of part of the build cycle
 - Not have contributors need to execute that to simply refresh files that are already there.

2.025000 2015-06-30T02:35:26Z 8f4450c
 [00 Features]
 - copyfiles now copies LICENSE and Makefile.PL by default.
 - RemovePrereqs::Provided is now standard issue.