@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.047.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -67,7 +67,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::RewriteVersion::Sanitized" => 0,
     "Dist::Zilla::Plugin::RunExtraTests" => 0,
     "Dist::Zilla::Plugin::Test::CPAN::Changes" => 0,
-    "Dist::Zilla::Plugin::Test::Compile::PerFile" => 0,
+    "Dist::Zilla::Plugin::Test::Compile::PerFile" => "0.003902",
     "Dist::Zilla::Plugin::Test::EOL" => 0,
     "Dist::Zilla::Plugin::Test::Kwalitee" => 0,
     "Dist::Zilla::Plugin::Test::MinimumVersion" => 0,
@@ -109,7 +109,7 @@ my %WriteMakefileArgs = (
     "Test::DZil" => "5.038",
     "Test::Fatal" => 0,
     "Test::File::ShareDir" => "0.3.0",
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "Test::Output" => 0,
     "lib" => 0
   },
@@ -168,7 +168,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::RewriteVersion::Sanitized" => 0,
   "Dist::Zilla::Plugin::RunExtraTests" => 0,
   "Dist::Zilla::Plugin::Test::CPAN::Changes" => 0,
-  "Dist::Zilla::Plugin::Test::Compile::PerFile" => 0,
+  "Dist::Zilla::Plugin::Test::Compile::PerFile" => "0.003902",
   "Dist::Zilla::Plugin::Test::EOL" => 0,
   "Dist::Zilla::Plugin::Test::Kwalitee" => 0,
   "Dist::Zilla::Plugin::Test::MinimumVersion" => 0,
@@ -199,7 +199,7 @@ my %FallbackPrereqs = (
   "Test::DZil" => "5.038",
   "Test::Fatal" => 0,
   "Test::File::ShareDir" => "0.3.0",
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "Test::Output" => 0,
   "lib" => 0,
   "namespace::autoclean" => 0,
