@@ -1,6 +1,11 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.025021
+ [Changed / runtime requires]
+ - Dist::Zilla::Plugin::Test::Compile::PerFile 0 → 0.003902
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 2.025020 2016-06-19T07:19:45Z
  [Changed / test requires]
