@@ -1,6 +1,15 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Bugfix]
+ - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
+ - Closes https://github.com/kentnl/Dist-Zilla-PluginBundle-Author-KENTNL/issues/3
+
+ [Dependencies::Stats]
+ - Dependencies changed since 2.025020, see misc/*.deps* for details
+ - develop: +1 ↑1
+ - runtime: ↑1
+ - test: ↓1
 
 2.025020 2016-06-19T07:19:45Z 9153e61
  [Dependencies::Stats]
